dfir_rs/tests/snapshots/surface_codegen__covid_tracing@graphvis_mermaid.snap
---
source: hydroflow/tests/surface_codegen.rs
expression: "hydroflow.meta_graph().unwrap().to_mermaid(&Default::default())"
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"(1v1) <code>source_stream(contacts_recv)</code>"/]:::pullClass
2v1[\"(2v1) <code>flat_map(|(pid_a, pid_b, time)| [(pid_a, (pid_b, time)), (pid_b, (pid_a, time))])</code>"/]:::pullClass
3v1[\"(3v1) <code>union()</code>"/]:::pullClass
4v1[\"(4v1) <code>source_stream(diagnosed_recv)</code>"/]:::pullClass
5v1[\"(5v1) <code>join::&lt;'static&gt;()</code>"/]:::pullClass
6v1[\"<div style=text-align:center>(6v1)</div> <code>filter(|(_pid_a, ((_pid_b, t_contact), (t_from, t_to)))| {<br>    (t_from..=t_to).contains(&amp;t_contact)<br>})</code>"/]:::pullClass
7v1[\"(7v1) <code>map(|(_pid_a, (pid_b_t_contact, _t_from_to))| pid_b_t_contact)</code>"/]:::pullClass
8v1[/"(8v1) <code>tee()</code>"\]:::pushClass
9v1[\"(9v1) <code>map(|(pid, t)| (pid, (t, t + TRANSMISSIBLE_DURATION)))</code>"/]:::pullClass
10v1[\"(10v1) <code>join::&lt;'static&gt;()</code>"/]:::pullClass
11v1[\"<div style=text-align:center>(11v1)</div> <code>map(|(_pid, ((name, phone), exposure))| {<br>    format!(&quot;[{}] To {}: Possible Exposure at t = {}&quot;, name, phone, exposure)<br>})</code>"/]:::pullClass
12v1[/"(12v1) <code>tee()</code>"\]:::pushClass
13v1[/"(13v1) <code>for_each(|msg| println!(&quot;{}&quot;, msg))</code>"\]:::pushClass
14v1[/"(14v1) <code>for_each(|msg| out_send.send(msg).unwrap())</code>"\]:::pushClass
15v1[\"(15v1) <code>source_stream(people_recv)</code>"/]:::pullClass
16v1["(16v1) <code>handoff</code>"]:::otherClass
17v1["(17v1) <code>handoff</code>"]:::otherClass
1v1-->2v1
4v1-->|0|3v1
7v1-->8v1
6v1-->7v1
5v1-->6v1
2v1-->|0|5v1
3v1-->|1|5v1
9v1-->|1|3v1
8v1-->|0|16v1
11v1-->12v1
10v1-->11v1
12v1-->13v1
12v1-->14v1
15v1-->|0|10v1
8v1-->|1|17v1
16v1-->9v1
17v1-->|1|10v1
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    16v1
    1v1
    2v1
    4v1
    9v1
    3v1
    5v1
    6v1
    7v1
    8v1
    subgraph sg_1v1_var_contacts ["var <tt>contacts</tt>"]
        1v1
        2v1
    end
    subgraph sg_1v1_var_exposed ["var <tt>exposed</tt>"]
        3v1
    end
    subgraph sg_1v1_var_new_exposed ["var <tt>new_exposed</tt>"]
        5v1
        6v1
        7v1
        8v1
    end
end
subgraph sg_2v1 ["sg_2v1 stratum 0"]
    15v1
    10v1
    11v1
    12v1
    13v1
    14v1
    subgraph sg_2v1_var_notifs ["var <tt>notifs</tt>"]
        10v1
        11v1
        12v1
    end
end

